fixed navbar collapsing problem. changed jumbotron padding

--- a/Hobo Project/Content/css/hobo.css
+++ b/Hobo Project/Content/css/hobo.css
@@ -1,5 +1,4 @@
 ﻿body {
-    padding-top:60px;
 	color: black;
     background-image: url('Elegant_Background-7a.jpg');
     background-size: 100%;
